# EdHack_Agosto_2025

./: .gitignore  .replit  COMPATIBILITY.md  GETTING_STARTED.md  Makefile  README.md  SUMMARY.md  WINDOWS.md  WINDOWS_SCRIPTS_READY.txt  activate.bat  activate.ps1  app.py  app_backup.py  app_modern.py  app_old.py  clean.bat  clean.ps1  clean.py  env.example  help.bat  help.ps1  install.py  pyproject.toml  replit.md  requirements-python313.txt  requirements.txt  run.bat  run.ps1  setup.bat  setup.ps1  setup_venv.py  update.bat  verify.bat  verify_installation.py
.git copy/: COMMIT_EDITMSG  index
.git copy/logs/refs/heads/: main  replit-agent
.git copy/refs/heads/: main
.git copy/refs/replit/: agent-ledger
.streamlit/: config.toml
analysis/: body_language_analyzer.py  content_analyzer.py  facial_analyzer.py  voice_analyzer.py
auth/: .gitkeep  user_manager.py  users.json
config/: languages.py
data/students/: .gitkeep
data/students/estudiante/: analysis_20250816_165240.json  analysis_20250816_165448.json  analysis_20250816_165604.json  summary.json
utils/: data_storage.py  report_generator.py  video_processor.py
visualization/: charts.py
