[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.4",
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "streamlit-authenticator>=0.4.2",
    "streamlit>=1.48.1",
    "whisper>=1.1.10",
    "pillow>=11.3.0",
    "reportlab>=4.4.3",
    "openpyxl>=3.1.5",
    "bcrypt>=4.3.0",
]
